[package]
name = "vellaveto-audit"
version = "6.0.5"
description = "Tamper-evident audit logging with hash chains and Ed25519 checkpoints"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.5" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde_json_canonicalizer = "0.3"
regex = { workspace = true }
unicode-normalization = { workspace = true }
# Streaming SIEM exporters (Phase 4)
reqwest = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
hostname = { version = "0.4", optional = true }
async-trait = { workspace = true }
# Phase 15: Observability platform integration
flate2 = { workspace = true, optional = true }  # gzip compression for webhook
# Phase 19: OTLP export
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
# Phase 37: Zero-Knowledge Audit Trails (Pedersen commitments)
curve25519-dalek = { version = "4", optional = true, features = ["rand_core"] }
# Phase 37.2: Groth16 batch proofs
ark-groth16 = { version = "0.5", optional = true }
ark-bn254 = { version = "0.5", optional = true }
ark-relations = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-r1cs-std = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-std = { version = "0.5", optional = true }
ark-snark = { version = "0.5", optional = true }
# Phase 43: Centralized Audit Store (PostgreSQL backend)
sqlx = { workspace = true, optional = true }
# Phase 54: Post-Quantum Cryptography (ML-DSA-65, FIPS 204)
fips204 = { version = "0.4", optional = true, default-features = false, features = ["ml-dsa-65", "default-rng"] }

[features]
default = []
siem-exporters = ["reqwest", "base64", "hostname"]
observability-exporters = ["reqwest", "base64", "flate2"]
archive = ["flate2"]
otlp-exporter = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-semantic-conventions"]
zk-audit = ["curve25519-dalek", "ark-groth16", "ark-bn254", "ark-relations", "ark-ff", "ark-r1cs-std", "ark-serialize", "ark-std", "ark-snark"]
postgres-store = ["sqlx"]
pqc-hybrid = ["fips204"]

[dev-dependencies]
tempfile = "3.26"
proptest = "1.4"
criterion = { version = "0.8", features = ["html_reports"] }
filetime = "0.2"

[[bench]]
name = "audit"
harness = false