[package]
name = "vellaveto-canary"
version = "6.0.0"
description = "Warrant canary creation and cryptographic verification"
edition = "2021"
license = "Apache-2.0"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
sha2 = "0.10"
serde_json_canonicalizer = "0.3"
rand = "0.8"
