[package]
name = "vellaveto-canary"
version = "6.0.2"
description = "Warrant canary creation and cryptographic verification"
edition = "2021"
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
serde_json_canonicalizer = "0.3"
rand = { workspace = true }
