[package]
name = "vellaveto-canonical"
version = "6.0.2"
description = "Canonical security policy presets for common scenarios"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.2" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.4"