[package]
name = "vellaveto-cluster"
version = "3.0.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Distributed state backend for Vellaveto clustering (Redis or local)"

[features]
default = []
redis-backend = ["deadpool-redis", "dep:sha2", "dep:unicode-normalization", "dep:uuid"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types" }
vellaveto-approval = { path = "../vellaveto-approval" }
vellaveto-config = { path = "../vellaveto-config" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Only used by redis-backend (feature-gated)
uuid = { workspace = true, optional = true }
sha2 = { version = "0.10", optional = true }
unicode-normalization = { version = "0.1", optional = true }

# Redis dependencies — only compiled when redis-backend feature is enabled
# Using deadpool-redis's re-exported redis types for version consistency
deadpool-redis = { version = "0.23", features = ["script", "connection-manager"], optional = true }

[dev-dependencies]
tempfile = "3.26"
toml = "1.0"
