[package]
name = "vellaveto-cluster"
version = "6.0.4"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Distributed state backend for Vellaveto clustering (Redis or local)"

[features]
default = []
redis-backend = ["deadpool-redis", "dep:sha2", "dep:unicode-normalization", "dep:uuid"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.4" }
vellaveto-approval = { path = "../vellaveto-approval", version = "6.0.4" }
vellaveto-config = { path = "../vellaveto-config", version = "6.0.4" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Only used by redis-backend (feature-gated)
uuid = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
unicode-normalization = { workspace = true, optional = true }

# Redis dependencies — only compiled when redis-backend feature is enabled
# Using deadpool-redis's re-exported redis types for version consistency
deadpool-redis = { version = "0.23", features = ["script", "connection-manager"], optional = true }

[dev-dependencies]
tempfile = "3.26"
toml = { workspace = true }
