[package]
name = "vellaveto-config"
version = "3.0.0"
description = "Configuration parsing and validation for Vellaveto policies"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
vellaveto-types = { path = "../vellaveto-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.0"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"
regex = "1"  # FIND-002: Validate DLP patterns at config load time
url = "2"    # Phase 15: URL validation for observability endpoints

[dev-dependencies]
tempfile = "3.0"
