[package]
name = "vellaveto-discovery"
version = "6.0.2"
description = "MCP tool topology crawling and verification for VellaVeto"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.2" }
vellaveto-canonical = { path = "../vellaveto-canonical", version = "6.0.2" }
petgraph = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = "1.4"
