[package]
name = "vellaveto-engine"
version = "3.0.0"
description = "Policy evaluation engine with glob, regex, and domain matching"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
vellaveto-types = { path = "../vellaveto-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
globset = "0.4"
ipnet = "2"
regex = "1"
percent-encoding = "2.3"
idna = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = "1.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "evaluation"
harness = false