[package]
name = "vellaveto-engine"
version = "6.0.3"
description = "Policy evaluation engine with glob, regex, and domain matching"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
discovery = ["dep:vellaveto-discovery"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.3" }
vellaveto-discovery = { path = "../vellaveto-discovery", version = "6.0.3", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
globset = "0.4"
ipnet = "2"
regex = { workspace = true }
percent-encoding = { workspace = true }
idna = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { workspace = true }
metrics = { workspace = true }
unicode-normalization = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = "1.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "evaluation"
harness = false

[[bench]]
name = "e2e_pipeline"
harness = false

[[bench]]
name = "throughput"
harness = false