[package]
name = "vellaveto-http-proxy-shield"
version = "6.0.2"
description = "Consumer shield HTTP proxy layer with traffic padding and header stripping"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
