[package]
name = "vellaveto-http-proxy"
version = "6.0.5"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Vellaveto MCP policy firewall — Streamable HTTP reverse proxy"

[features]
default = []
grpc = ["tonic", "tonic-prost", "prost", "prost-types", "tonic-health", "tonic-build", "tonic-prost-build", "tokio-util", "tokio-stream"]
discovery = ["vellaveto-mcp/discovery"]
projector = ["vellaveto-mcp/projector"]

[lib]
name = "vellaveto_http_proxy"
path = "src/lib.rs"

[[bin]]
name = "vellaveto-http-proxy"
path = "src/main.rs"

[dependencies]
vellaveto-canonical = { path = "../vellaveto-canonical", version = "6.0.5" }
vellaveto-types = { path = "../vellaveto-types", version = "6.0.5" }
vellaveto-engine = { path = "../vellaveto-engine", version = "6.0.5" }
vellaveto-audit = { path = "../vellaveto-audit", version = "6.0.5" }
vellaveto-config = { path = "../vellaveto-config", version = "6.0.5" }
vellaveto-mcp = { path = "../vellaveto-mcp", version = "6.0.5" }
vellaveto-approval = { path = "../vellaveto-approval", version = "6.0.5" }
vellaveto-tls = { path = "../vellaveto-tls", version = "6.0.5" }
tokio-rustls = "0.26"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { workspace = true, features = ["stream"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-tungstenite = { workspace = true }
bytes = "1"
http = "1"
tower = "0.5"
sha2 = { workspace = true }
metrics = { workspace = true }
hmac = "0.12"
hex = { workspace = true }
subtle = "2"
governor = "0.10"
base64 = { workspace = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
tonic-health = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true }
tonic-prost-build = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.26"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "http_proxy"
harness = false
