[package]
name = "vellaveto-integration"
version = "3.0.0"
description = "Integration test suite for Vellaveto components"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
vellaveto-types = { path = "../vellaveto-types" }
vellaveto-engine = { path = "../vellaveto-engine" }
vellaveto-audit = { path = "../vellaveto-audit", features = ["observability-exporters"] }
vellaveto-config = { path = "../vellaveto-config" }
vellaveto-approval = { path = "../vellaveto-approval" }
vellaveto-mcp = { path = "../vellaveto-mcp" }
vellaveto-server = { path = "../vellaveto-server" }
vellaveto-http-proxy = { path = "../vellaveto-http-proxy" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = "3.0"
arc-swap = "1"
axum = "0.8"
tower = "0.5"
dashmap = "6"

[dev-dependencies]
flate2 = "1.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { workspace = true }
base64 = "0.22"
