[package]
name = "vellaveto-integration"
version = "6.0.6"
description = "Integration test suite for Vellaveto components"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["discovery"]
discovery = ["vellaveto-engine/discovery"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types" }
vellaveto-engine = { path = "../vellaveto-engine" }
vellaveto-audit = { path = "../vellaveto-audit", features = ["observability-exporters"] }
vellaveto-config = { path = "../vellaveto-config" }
vellaveto-approval = { path = "../vellaveto-approval" }
vellaveto-mcp = { path = "../vellaveto-mcp" }
vellaveto-server = { path = "../vellaveto-server" }
vellaveto-discovery = { path = "../vellaveto-discovery" }
vellaveto-http-proxy = { path = "../vellaveto-http-proxy" }
vellaveto-mcp-shield = { path = "../vellaveto-mcp-shield" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = "3.26"
arc-swap = "1"
axum = "0.8"
tower = "0.5"
dashmap = "6"

[dev-dependencies]
flate2 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
