[package]
name = "vellaveto-mcp-shield"
version = "6.0.1"
description = "Consumer shield: bidirectional PII sanitization, session isolation, encrypted local audit"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.1" }
vellaveto-audit = { path = "../vellaveto-audit", version = "6.0.1" }
vellaveto-config = { path = "../vellaveto-config", version = "6.0.1" }
chacha20poly1305 = "0.10"
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
ed25519-dalek = { workspace = true }

[features]
zk-audit = ["vellaveto-audit/zk-audit"]

[dev-dependencies]
tempfile = "3.0"
