[package]
name = "vellaveto-mcp"
version = "6.0.5"
description = "MCP protocol security: DLP, injection detection, tool registry, and guardrails"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
default = []
semantic-detection = []
semantic-guardrails = ["lru", "async-trait"]
llm-cloud = ["semantic-guardrails", "reqwest"]
llm-local-gguf = ["semantic-guardrails"]
llm-local-onnx = ["semantic-guardrails"]
semantic-guardrails-full = ["semantic-guardrails", "llm-cloud", "llm-local-gguf", "llm-local-onnx"]
rag-defense = []
a2a = []
discovery = ["vellaveto-discovery"]
projector = []
multimodal = ["image"]
fips = ["p256"]
consumer-shield = ["vellaveto-mcp-shield"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.5" }
vellaveto-engine = { path = "../vellaveto-engine", version = "6.0.5" }
vellaveto-audit = { path = "../vellaveto-audit", version = "6.0.5" }
vellaveto-approval = { path = "../vellaveto-approval", version = "6.0.5" }
vellaveto-config = { path = "../vellaveto-config", version = "6.0.5" }
vellaveto-canonical = { path = "../vellaveto-canonical", version = "6.0.5" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
aho-corasick = "1.1"
sha2 = { workspace = true }
hmac = "0.12"
serde_json_canonicalizer = "0.3"
hex = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
idna = "1.0"
ed25519-dalek = { workspace = true }
subtle = "2"
chacha20poly1305 = "0.10"
rand = { workspace = true }
getrandom = "0.2"
semver = "1.0"

# Topology discovery (optional, gated by "discovery" feature)
vellaveto-discovery = { path = "../vellaveto-discovery", version = "6.0.5", optional = true }

# Semantic guardrails dependencies
# SECURITY: lru >= 0.16.3 required to fix RUSTSEC-2026-0002 (Stacked Borrows violation)
lru = { version = "0.16", optional = true }
async-trait = { workspace = true, optional = true }

# Cloud LLM backends
reqwest = { workspace = true, optional = true }

# Multimodal content scanning — metadata extraction uses flate2 (no image crate needed)
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
flate2 = { workspace = true }

# FIPS 140-3 compliance mode (Phase 23.3)
p256 = { version = "0.13", features = ["ecdsa"], optional = true }

# Consumer shield (bidirectional PII sanitization)
vellaveto-mcp-shield = { path = "../vellaveto-mcp-shield", version = "6.0.5", optional = true }

[dev-dependencies]
proptest = "1.4"
tempfile = "3.26"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "inspection"
harness = false

[[bench]]
name = "semantic"
harness = false
required-features = ["semantic-detection"]

[[bench]]
name = "rug_pull"
harness = false
