[package]
name = "vellaveto-proxy"
version = "3.0.0"
description = "MCP stdio proxy for command-line tool integration"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true

[[bin]]
name = "vellaveto-proxy"
path = "src/main.rs"

[features]
default = []
discovery = ["vellaveto-discovery", "vellaveto-mcp/discovery"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types" }
vellaveto-engine = { path = "../vellaveto-engine" }
vellaveto-audit = { path = "../vellaveto-audit" }
vellaveto-config = { path = "../vellaveto-config" }
vellaveto-mcp = { path = "../vellaveto-mcp" }
vellaveto-discovery = { path = "../vellaveto-discovery", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
