[package]
name = "vellaveto-proxy"
version = "3.0.0"
description = "MCP stdio proxy for command-line tool integration"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true

[[bin]]
name = "vellaveto-proxy"
path = "src/main.rs"

[features]
default = []
discovery = ["vellaveto-discovery", "vellaveto-mcp/discovery"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "3.0.0" }
vellaveto-engine = { path = "../vellaveto-engine", version = "3.0.0" }
vellaveto-audit = { path = "../vellaveto-audit", version = "3.0.0" }
vellaveto-config = { path = "../vellaveto-config", version = "3.0.0" }
vellaveto-mcp = { path = "../vellaveto-mcp", version = "3.0.0" }
vellaveto-discovery = { path = "../vellaveto-discovery", version = "0.1.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
