[package]
name = "vellaveto-proxy"
version = "6.0.5"
description = "MCP stdio proxy with built-in security presets — zero config needed"
edition = "2021"
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[[bin]]
name = "vellaveto-proxy"
path = "src/main.rs"

[features]
default = []
discovery = ["vellaveto-discovery", "vellaveto-mcp/discovery"]

[dependencies]
vellaveto-types = { path = "../vellaveto-types", version = "6.0.5" }
vellaveto-engine = { path = "../vellaveto-engine", version = "6.0.5" }
vellaveto-audit = { path = "../vellaveto-audit", version = "6.0.5" }
vellaveto-config = { path = "../vellaveto-config", version = "6.0.5" }
vellaveto-mcp = { path = "../vellaveto-mcp", version = "6.0.5" }
vellaveto-discovery = { path = "../vellaveto-discovery", version = "6.0.5", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
